--- a/index.html
+++ b/index.html
@@ -197,6 +197,9 @@
                         <li>
                             <a href="https://tw.linkedin.com/in/mrlintaiwan" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
                         </li>
+						<li>
+                            <a href="http://lintaiwan.github.io/Lin_Bio.html" class="btn btn-default btn-lg"><i class="fa fa-user fa-fw"></i> <span class="network-name">Mr.Lin</span></a>
+                        </li>
 						
                     </ul>
                 </div>
