--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
                     <div class="intro-message">
 						<br>
                         <h2><font size="+9">Life Moment!</font></h2>
-                        <h3>Share & Send to Who U Care!</h3>
+                        <h3>Share & Send to Who You Care!</h3>
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
 							<li>
-                                <a href="signin.html" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-camera" aria-hidden="true"></span><span class="network-name">&nbsp Try & Sign in </span></a>
+                                <a href="signin.html" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-camera" aria-hidden="true"></span><span class="network-name"><font size="+0.4"><strong>&nbsp Try & Sign in <strong></font></span></a>
                             </li>
 						<!--
                             <li>
@@ -181,7 +181,7 @@
 
             <div class="row">
                 <div class="col-lg-3">
-                    <h2>Contact us!</h2>
+                    <h2>Contact Me!</h2>
                 </div>
                 <div class="col-lg-9">
                     <ul class="list-inline banner-social-buttons">
