--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand topnav" href="#">Catch Your Awesome Life Moment!</a>
+                <a class="navbar-brand topnav" href="index.html">Catch Your Awesome Life Moment!</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -79,7 +79,7 @@
                         <hr class="intro-divider">
                         <ul class="list-inline intro-social-buttons">
 							<li>
-                                <a href="signin.html" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-camera" aria-hidden="true"></span><span class="network-name"><font size="+0.4"><strong>&nbsp Try & Sign in <strong></font></span></a>
+                                <a href="signin.html" class="btn btn-default btn-lg"><i class="fa fa-camera-retro fa-fw"></i></span><span class="network-name"><font size="+0.3"><strong>&nbsp Try & Sign in <strong></font></span></a>
                             </li>
 						<!--
                             <li>
@@ -115,7 +115,7 @@
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Simple Frame layout:<br>Special Thanks</h2>
                     <p class="lead">A special thanks to 
-					<a target="_blank" href="http://join.deathtothestockphoto.com/">Your love & friends </a><br>Choose your best moment with them!.<br> Share or Send to Them! Let them know!</p>
+					<a target="_blank" href="http://join.deathtothestockphoto.com/">Your love & friends </a><br>Choose your best moment with them <i class="fa fa-heart fa-fw"></i>!<br> Share or Send to Them! Let them know!</p>
 		
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 col-sm-6">
@@ -138,7 +138,9 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Let them Surprise! <br></h2>
-                    <p class="lead">Send to them Secretly. <a target="_blank" href="http://www.psdcovers.com/"></a>Just let us know their address.</p>
+                    <p class="lead">Send to them Secretly. <a target="_blank" href="http://www.psdcovers.com/"></a>Just let us know their 
+					<i class="fa fa-map-marker fa-fw"></i> address. <br>You order, we anonymously send <i class="fa fa-gift fa-fw"></i>! </p>
+					
                 </div>
                 <div class="col-lg-4 col-sm-pull-6  col-sm-6">
 					<br>
@@ -161,7 +163,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">All About Happy<br></h2>
-                    <p class="lead">Cherish your Friends!</p>
+                    <p class="lead">Cherish your Friendship & who you care <i class="fa fa-thumbs-o-up fa-fw"></i>!</p>
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 col-sm-6">
                     <img class="img-responsive" src="img/fingers1.jpg" alt="">
